fail_crate/tests/new_on_union.rs
use inew::New;

#[derive(New)]
union A {
    x: u32,
    y: f32,
}

fn main() {}
